# criomos-archive

./: .gitignore  .mcp.json  AGENT_RULES.md  GUIDELINES.md  criomos-lib.nix  default.nix  flake.nix  implicitNodes.nix  libExtension.nix  nodeNames.nix  readme.md  result
capnp/: criosphere.capnp
data/config/largeAI/: litellm.json  llm.json
data/config/pi/: prometheus-model-catalog.json  prometheus-model-lock.json
data/keyboard/: xfk_colemak_layout.json  xfk_to_zed_actions.json  zed_colemak_xah_fly.json
docs/: AGENTS.md  GUIDELINES.md  LLAMA_RUNTIME_PROMETHEUS.md
nix/: clavifaber.nix  criomos-deploy.nix  llama-cpp-prometheus.nix  test-local-fod.nix
nix/flake-compat/: default.nix
nix/homeModule/: baseModule.nix  beisModule.nix  default.nix
nix/homeModule/emacs/: README.md  default.nix  init.el
nix/kor/: default.nix
nix/mkCrioSphere/: clustersModule.nix  metastrizModule.nix  speciesModule.nix  spicizModule.nix
nix/mkCrioZones/: default.nix  horizonOptions.nix  hyraizynOptions.nix  mkHorizonModule.nix  mkHyraizynModule.nix
nix/mkCriomOS/: constants.nix  default.nix  konstynts.nix  liveIso.nix  llm.nix  niks.nix  nix.nix  normalize.nix  normylaiz.nix  preInstalled.nix  userHomes.nix  users.nix
nix/mkDatom/: default.nix
nix/mkUyrld/: default.nix
nix/mkWorld/: default.nix
nix/pkdjz/: adHoc.nix  default.nix
src/clavifaber/: Cargo.toml
src/clavifaber/src/: complex.rs  error.rs  gpg_agent.rs  main.rs  ssh_key.rs  util.rs  x509.rs
src/clavifaber/tests/: complex_lifecycle.rs  pki_lifecycle.sh
src/criomos-deploy/: deploy.sh  reload-shell.sh
(+53 files in other folders)
